# Examen-Parcial-2

./: CMakeLists.txt  README.md  main.cpp  main.h
ejercicio 1/: main.cpp  main.h
ejercicio2/: ejercicio2.cpp  ejercicio2.h
ejercicio3/: ejercicio3.cpp  ejercicio3.h
ejercicio4/: ejercicio4.cpp  ejercicio4.h
