cmake_minimum_required(VERSION 3.29)
project(untitled11)

set(CMAKE_CXX_STANDARD 20)

add_executable(Examen-Parcial-2-1 "ejercicio 1/main.cpp")
add_executable(Examen-Parcial-2-2 "ejercicio2/ejercicio2.cpp")
add_executable(Examen-Parcial-2-3 "ejercicio3/ejercicio3.cpp")
add_executable(Examen-Parcial-2-4 "ejercicio4/ejercicio4.cpp")